// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change KPI widget measure handler for KPI with date dataset should emit correct events 1`] = `
Array [
  Object {
    "commandType": "GDC.DASH/CMD.KPI_WIDGET.CHANGE_MEASURE",
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  Object {
    "correlationId": undefined,
    "queryType": "GDC.DASH/QUERY.MEASURE.DATE.DATASETS",
    "type": "GDC.DASH/EVT.QUERY.STARTED",
  },
  Object {
    "correlationId": undefined,
    "queryType": "GDC.DASH/QUERY.MEASURE.DATE.DATASETS",
    "type": "GDC.DASH/EVT.QUERY.COMPLETED",
  },
  Object {
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.KPI_WIDGET.MEASURE_CHANGED",
  },
]
`;

exports[`change KPI widget measure handler for any KPI should emit correct events 1`] = `
Array [
  Object {
    "commandType": "GDC.DASH/CMD.KPI_WIDGET.CHANGE_MEASURE",
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.COMMAND.STARTED",
  },
  Object {
    "correlationId": "testCorrelationId",
    "type": "GDC.DASH/EVT.KPI_WIDGET.MEASURE_CHANGED",
  },
]
`;
